2009-06-23  Marek Habersack  <mhabersack@novell.com>

	* System.ComponentModel.DataAnnotations.dll.sources: added
	System.ComponentModel.DataAnnotations/AssociatedMetadataTypePropertyDescriptor.cs

2009-04-23  Marek Habersack  <mhabersack@novell.com>

	* System.ComponentModel.DataAnnotations_test.dll.sources: added

	* System.ComponentModel.DataAnnotations.dll.sources: added
	System.ComponentModel.DataAnnotations/AssociatedMetadataTypeTypeDescriptor.cs

	* Makefile: enabled tests

2008-10-14  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile, System.ComponentModel.DataAnnotations.dll :
	  initial checkin.